fix(source) alignment issues CFY-3842

--- a/app/styles/_source.scss
+++ b/app/styles/_source.scss
@@ -70,10 +70,10 @@
 
         .sourcecode {
             float: right;
+            padding-left: 20px;
             width: 78%;
             .pre {
                 font-size: 13px;
-                margin-left: 20px;
                 border: 1px solid #cccccc;
                 border-radius: 4px;
                 background-color: #fff;
